updated campaings to fix slim whitespace issue

--- a/source/stylesheets/_grid.scss
+++ b/source/stylesheets/_grid.scss
@@ -19,6 +19,10 @@
   height: 20px;
 }
 
+.search-box {
+  float:left;
+
+}
 .search-input {
   moz-border-radius: 3px;
   webkit-border-radius: 3px;
